--- a/PracticalApps/Northwind.Web/Pages/index.cshtml
+++ b/PracticalApps/Northwind.Web/Pages/index.cshtml
@@ -4,7 +4,7 @@
 
     public void OnGet() {
         ViewData["Title"] = "Northwind B2B";
-        Model.DayName = DateTime.Now.ToString("dddd");
+        DayName = DateTime.Now.ToString("dddd");
     }
 }
 
@@ -13,8 +13,13 @@
     <h1 class="display-3">Welcome to Northwind B2B</h1>
     <p class="lead">We supply products to our customers.</p>
     <hr />
-    <p>It's @Model.DayName! Our customers include restaurants, hotels, and cruise lines.</p>
+    <p>It's @DayName! Our customers include restaurants, hotels, and cruise lines.</p>
     <p>
         <a class="btn btn-primary" href="suppliers">Learn more about our suppliers</a>
+    </p>
+    <p>
+        <a class="btn btn-primary" href="packtfeatures/employees">
+            Contact our employees
+        </a>
     </p>
 </div>
